tests/functional/lang/eval-fail-readFileType-outPath-non-absolute.err.exp
error:
       … while calling the 'readFileType' builtin
         at /pwd/lang/eval-fail-readFileType-outPath-non-absolute.nix:1:1:
            1| builtins.readFileType { outPath = "not-absolute"; }
             | ^
            2|

       … while using the `outPath` attribute
         at /pwd/lang/eval-fail-readFileType-outPath-non-absolute.nix:1:25:
            1| builtins.readFileType { outPath = "not-absolute"; }
             |                         ^
            2|

       … while realising the context of a path

       error: string 'not-absolute' doesn't represent an absolute path
